...
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"
        />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="Friends"
        />

</menu>

