<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingBottom="55dp">
    <!--android:fillViewport="true">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/friend_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Friend" />

</LinearLayout>


    </ScrollView>
